Refactor: change FacilityType get method to enum function